--- a/pokedex/package.json
+++ b/pokedex/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.8",
+    "fs": "^0.0.1-security",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -30,5 +31,10 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "vite": "^6.0.1"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
